added logic to set attended events and fetch them